AnalizadorSIC_GRAFICO/obj/Debug/GramaticaSIC_STDParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\lluis\Documents\9no Semestre\Labo ProDeSistemas\Practica12\Proyecto LISTO\AnalizadorSIC_GRAFICO\AnalizadorSIC_GRAFICO\GramaticaSIC_STD.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace AnalizadorSIC_GRAFICO {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class GramaticaSIC_STDParser : Parser {
	public const int
		TIPODIRECTIVA=1, DIRSTART=2, DIREND=3, TRSUB=4, CODOP=5, CONSTCAD=6, CONSTHEX=7, 
		ID=8, DIRBYTE=9, FINL=10, TAB=11, NUM=12, INDICE=13, COMPNUM=14, WS=15;
	public const int
		RULE_programa = 0, RULE_inicio = 1, RULE_final = 2, RULE_entrada = 3, 
		RULE_proposiciones = 4, RULE_proposicion = 5, RULE_instruccion = 6, RULE_directiva = 7, 
		RULE_etiqueta = 8, RULE_opinstruccion = 9, RULE_indexado = 10, RULE_opdirectiva = 11, 
		RULE_tipoByte = 12;
	public static readonly string[] ruleNames = {
		"programa", "inicio", "final", "entrada", "proposiciones", "proposicion", 
		"instruccion", "directiva", "etiqueta", "opinstruccion", "indexado", "opdirectiva", 
		"tipoByte"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'START'", "'END'", "'RSUB'", null, null, null, null, "'BYTE'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "TIPODIRECTIVA", "DIRSTART", "DIREND", "TRSUB", "CODOP", "CONSTCAD", 
		"CONSTHEX", "ID", "DIRBYTE", "FINL", "TAB", "NUM", "INDICE", "COMPNUM", 
		"WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GramaticaSIC_STD.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public GramaticaSIC_STDParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramaContext : ParserRuleContext {
		public ProgramaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_programa; } }
	 
		public ProgramaContext() { }
		public virtual void CopyFrom(ProgramaContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ProgramIniContext : ProgramaContext {
		public InicioContext inicio() {
			return GetRuleContext<InicioContext>(0);
		}
		public ProposicionesContext proposiciones() {
			return GetRuleContext<ProposicionesContext>(0);
		}
		public FinalContext final() {
			return GetRuleContext<FinalContext>(0);
		}
		public ProgramIniContext(ProgramaContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.EnterProgramIni(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.ExitProgramIni(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_STDVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_STDVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgramIni(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramaContext programa() {
		ProgramaContext _localctx = new ProgramaContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_programa);
		try {
			_localctx = new ProgramIniContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 26; inicio();
			State = 27; proposiciones(0);
			State = 28; final();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InicioContext : ParserRuleContext {
		public InicioContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inicio; } }
	 
		public InicioContext() { }
		public virtual void CopyFrom(InicioContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class InicioProContext : InicioContext {
		public ProposicionContext proposicion() {
			return GetRuleContext<ProposicionContext>(0);
		}
		public InicioProContext(InicioContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.EnterInicioPro(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.ExitInicioPro(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_STDVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_STDVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInicioPro(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class InicioEtiContext : InicioContext {
		public EtiquetaContext etiqueta() {
			return GetRuleContext<EtiquetaContext>(0);
		}
		public ITerminalNode[] TAB() { return GetTokens(GramaticaSIC_STDParser.TAB); }
		public ITerminalNode TAB(int i) {
			return GetToken(GramaticaSIC_STDParser.TAB, i);
		}
		public ITerminalNode DIRSTART() { return GetToken(GramaticaSIC_STDParser.DIRSTART, 0); }
		public ITerminalNode NUM() { return GetToken(GramaticaSIC_STDParser.NUM, 0); }
		public ITerminalNode FINL() { return GetToken(GramaticaSIC_STDParser.FINL, 0); }
		public InicioEtiContext(InicioContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.EnterInicioEti(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.ExitInicioEti(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_STDVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_STDVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInicioEti(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InicioContext inicio() {
		InicioContext _localctx = new InicioContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_inicio);
		try {
			State = 38;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new InicioEtiContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 30; etiqueta();
				State = 31; Match(TAB);
				State = 32; Match(DIRSTART);
				State = 33; Match(TAB);
				State = 34; Match(NUM);
				State = 35; Match(FINL);
				}
				break;

			case 2:
				_localctx = new InicioProContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 37; proposicion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FinalContext : ParserRuleContext {
		public FinalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_final; } }
	 
		public FinalContext() { }
		public virtual void CopyFrom(FinalContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class EndfinaltotalContext : FinalContext {
		public EtiquetaContext etiqueta() {
			return GetRuleContext<EtiquetaContext>(0);
		}
		public ITerminalNode[] TAB() { return GetTokens(GramaticaSIC_STDParser.TAB); }
		public ITerminalNode TAB(int i) {
			return GetToken(GramaticaSIC_STDParser.TAB, i);
		}
		public ITerminalNode DIREND() { return GetToken(GramaticaSIC_STDParser.DIREND, 0); }
		public EntradaContext entrada() {
			return GetRuleContext<EntradaContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(GramaticaSIC_STDParser.Eof, 0); }
		public EndfinaltotalContext(FinalContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.EnterEndfinaltotal(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.ExitEndfinaltotal(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_STDVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_STDVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEndfinaltotal(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FinEntradaContext : FinalContext {
		public ITerminalNode[] TAB() { return GetTokens(GramaticaSIC_STDParser.TAB); }
		public ITerminalNode TAB(int i) {
			return GetToken(GramaticaSIC_STDParser.TAB, i);
		}
		public ITerminalNode DIREND() { return GetToken(GramaticaSIC_STDParser.DIREND, 0); }
		public EntradaContext entrada() {
			return GetRuleContext<EntradaContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(GramaticaSIC_STDParser.Eof, 0); }
		public FinEntradaContext(FinalContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.EnterFinEntrada(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.ExitFinEntrada(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_STDVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_STDVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFinEntrada(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FinalSinEntradaContext : FinalContext {
		public ITerminalNode TAB() { return GetToken(GramaticaSIC_STDParser.TAB, 0); }
		public ITerminalNode DIREND() { return GetToken(GramaticaSIC_STDParser.DIREND, 0); }
		public ITerminalNode Eof() { return GetToken(GramaticaSIC_STDParser.Eof, 0); }
		public FinalSinEntradaContext(FinalContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.EnterFinalSinEntrada(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.ExitFinalSinEntrada(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_STDVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_STDVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFinalSinEntrada(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FinalContext final() {
		FinalContext _localctx = new FinalContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_final);
		try {
			State = 56;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new FinEntradaContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 40; Match(TAB);
				State = 41; Match(DIREND);
				State = 42; Match(TAB);
				State = 43; entrada();
				State = 44; Match(Eof);
				}
				break;

			case 2:
				_localctx = new EndfinaltotalContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 46; etiqueta();
				State = 47; Match(TAB);
				State = 48; Match(DIREND);
				State = 49; Match(TAB);
				State = 50; entrada();
				State = 51; Match(Eof);
				}
				break;

			case 3:
				_localctx = new FinalSinEntradaContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 53; Match(TAB);
				State = 54; Match(DIREND);
				State = 55; Match(Eof);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntradaContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(GramaticaSIC_STDParser.ID, 0); }
		public EntradaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entrada; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.EnterEntrada(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.ExitEntrada(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_STDVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_STDVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntrada(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntradaContext entrada() {
		EntradaContext _localctx = new EntradaContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_entrada);
		try {
			State = 60;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case ID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 58; Match(ID);
				}
				break;
			case Eof:
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProposicionesContext : ParserRuleContext {
		public ProposicionesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_proposiciones; } }
	 
		public ProposicionesContext() { }
		public virtual void CopyFrom(ProposicionesContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ProposicionDuplicadaContext : ProposicionesContext {
		public ProposicionesContext proposiciones() {
			return GetRuleContext<ProposicionesContext>(0);
		}
		public ProposicionContext proposicion() {
			return GetRuleContext<ProposicionContext>(0);
		}
		public ProposicionDuplicadaContext(ProposicionesContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.EnterProposicionDuplicada(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.ExitProposicionDuplicada(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_STDVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_STDVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProposicionDuplicada(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ProposicionInstContext : ProposicionesContext {
		public ProposicionContext proposicion() {
			return GetRuleContext<ProposicionContext>(0);
		}
		public ProposicionInstContext(ProposicionesContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.EnterProposicionInst(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.ExitProposicionInst(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_STDVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_STDVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProposicionInst(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProposicionesContext proposiciones() {
		return proposiciones(0);
	}

	private ProposicionesContext proposiciones(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		ProposicionesContext _localctx = new ProposicionesContext(_ctx, _parentState);
		ProposicionesContext _prevctx = _localctx;
		int _startState = 8;
		EnterRecursionRule(_localctx, 8, RULE_proposiciones, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new ProposicionInstContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			State = 63; proposicion();
			}
			_ctx.stop = _input.Lt(-1);
			State = 69;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ProposicionDuplicadaContext(new ProposicionesContext(_parentctx, _parentState));
					PushNewRecursionContext(_localctx, _startState, RULE_proposiciones);
					State = 65;
					if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
					State = 66; proposicion();
					}
					} 
				}
				State = 71;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class ProposicionContext : ParserRuleContext {
		public ProposicionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_proposicion; } }
	 
		public ProposicionContext() { }
		public virtual void CopyFrom(ProposicionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PropsicionInstruccionContext : ProposicionContext {
		public InstruccionContext instruccion() {
			return GetRuleContext<InstruccionContext>(0);
		}
		public PropsicionInstruccionContext(ProposicionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.EnterPropsicionInstruccion(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.ExitPropsicionInstruccion(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_STDVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_STDVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropsicionInstruccion(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PropsicionDirectivaContext : ProposicionContext {
		public DirectivaContext directiva() {
			return GetRuleContext<DirectivaContext>(0);
		}
		public PropsicionDirectivaContext(ProposicionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.EnterPropsicionDirectiva(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.ExitPropsicionDirectiva(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_STDVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_STDVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropsicionDirectiva(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ErrorContext : ProposicionContext {
		public ErrorContext(ProposicionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.EnterError(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_STDListener typedListener = listener as IGramaticaSIC_STDListener;
			if (typedListener != null) typedListener.ExitError(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_STDVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_STDVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitError(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProposicionContext proposicion() {
		ProposicionContext _localctx = new ProposicionContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_proposicion);
		try {
			State = 75;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new PropsicionInstruccionContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 72; instruccion();
				}
				break;

			case 2:
				_localctx = new PropsicionDirectivaContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 73; directiva();
				}
				break;

			case 3:
				_localctx = new ErrorContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 74;
				MatchWildcard();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
